# hm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  create_table.cpp  database.hpp  history.hpp  insert.cpp  install.sh  main.cpp  requirements.txt  scripts-to-bashrc  select.cpp  select.sh  setup.py  shell.nix  test.nix  version.cmake
.github/workflows/: build-and-test.yml  c-cpp.yml  code-style.yml  python-publish.yml
docs/: configuration.md  installation.md  python_package.md  usage.md
hm_initializer/: __init__.py
misc/: CMakeLists.txt  read_db.cpp
pkgs/nix/: default.nix  hm.nix.in
scripts/: check_style.sh  debug_travis.sh  install_cram.sh  scripts-to-bashrc  shell.nix  update_copyright.sh
sqlite3/: CMakeLists.txt
src/: CMakeLists.txt  configurator.hpp  const_conf.hpp  database.hpp  history.hpp  main.cpp  parser.hpp  progress_bar.hpp  query.hpp  schema.hpp  utils.hpp  version.cmake  version.hpp.in
tests/: common.py  conftest.py  test_insert_select.py  test_interface.sh  test_release_deb.sh  test_release_nix.sh
tests/functional/: conftest.py  test_insert_select_by_path.py
tests/release/: check_history.sh  check_test_result.sh  install_release_deb.sh  install_release_nix.sh  prepare_history.sh  prepare_test_env.sh  select_by_dir.test  test_interface.sh  test_interface.t  tester.sh
tests/stress/: common.py  test_real_time.py
tests/stress/data/: .gitignore
tests/system/: common.py  conftest.py  prepare_test_env.sh  test_bashrc  test_basic_insert_select.py  test_insert_select.py  test_insert_select_by_path.py  test_insert_select_by_sess_id.py  test_select_by_dir.t
